# seedling

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  core_logic.metta  package-lock.json  package.json  startup  todo.md
src/: App.css  App.tsx  CLAUDE.md  hardware.rs  main.rs  main_test.rs  process.rs  process_integration_test.rs  process_test.rs  tmux.rs  tmux_test.rs
src-tauri/: CLAUDE.md  Cargo.toml  adme.rs  app.rs  filters.rs  hardware.rs  hardware_test.rs  main.rs  process.rs  process_integration_test.rs  router_agent.rs  tauri.conf.json  tauri_app.rs  tauri_config.rs  tauri_interface.rs  telegram.rs  terminal.rs
src-tauri/adme/: CLAUDE.md  agent.rs  memory.rs  metta.rs  planner.rs  tools.rs  translator.rs
src-tauri/adme/tools/: CLAUDE.md  add_link.rs  add_symbol.rs  bind_symbol.rs  get_symbols.rs  relate.rs  retrieve_memory.rs  store_memory.rs
src-tauri/capabilities/: CLAUDE.md  default.json
src-tauri/icons/: CLAUDE.md
src/assets/: CLAUDE.md
src/components/: AgentBase.tsx  AgentsMenu.tsx  AgentsTab.css  AgentsTab.tsx  CLAUDE.md  EngineerAgent.tsx  ReviewerAgent.tsx  SettingsTab.css  SettingsTab.tsx  TerminalTab.css  TerminalTab.tsx  TesterAgent.tsx
src/hooks/: CLAUDE.md  useShiftAHotkey.ts
