[package]
name = "seedling"
version = "0.1.0"
edition = "2024"

[dependencies]
# Error handling
anyhow = "1.0"

# Async Runtime (The engine)
tokio = { version = "1.0", features = ["full"] }

# CLI Argument Parsing
clap = { version = "4.0", features = ["derive"] }

# Serialization (Config & JSON)
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9" # To read your llama-swap config
serde_json = "1.0"

# Process Management & System Info
sysinfo = "0.30" # To find and kill processes
nix = { version = "0.27", features = ["signal"] } # For sending SIGKILL/SIGTERM

# Filesystem Watching (The Trigger)
notify = "6.0"

# Regex (For parsing GPU output)
regex = "1.5"
