[package]
name = "seedling"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "seedling"
path = "main.rs"

[dependencies]
# Error handling
anyhow = "1.0"

# Async Runtime (The engine)
tokio = { version = "1.8", features = ["full"] }

# CLI Argument Parsing
clap = { version = "4.0", features = ["derive"] }

# Serialization (Config & JSON)
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9" # To read your llama-swap config
serde_json = "1.0"

# Process Management & System Info
sysinfo = "0.30" # To find and kill processes
nix = { version = "0.27", features = ["signal"] } # For sending SIGKILL/SIGTERM

# Filesystem Watching (The Trigger)
notify = "6.0"

# Regex (For parsing GPU output)
regex = "1.5"

# Tauri Desktop Framework
tauri = { version = "2.0", features = [] }
# Add the shell plugin
tauri-plugin-shell = "2.0" 
tauri-plugin-pty = "0.2.1"
portable-pty = "0.9.0"
rig-core = {version = "0.30.0", features= ["derive"] }
teloxide = { version = "0.17.0", features = ["macros"] }
dotenvy = "0.15.7"
log = "0.4"
pretty_env_logger = "0.5"
thiserror = "2.0.18"
rig-fastembed = "0.2.22"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
